폰트 색깔 사이즈

--- a/src/main/webapp/resources/css/result.css
+++ b/src/main/webapp/resources/css/result.css
@@ -12,3 +12,42 @@
 	text-align:center;
 	color:#002EA5;
 }
+.ballad{
+	color:#512626;
+	font-size:50px;
+}
+.classic{
+	color:# ;
+}
+.dance{
+	color:#FCAD36 ;
+	font-size:50px;
+}
+.disco{
+	color:#C56834 ;
+	font-size:50px;
+}
+.hiphop{
+	color:#00748D ;
+	font-size:50px;
+}
+.indie{
+	color:#F34242 ;
+	font-size:50px;
+}
+.jazz{
+	color:#C07A56 ;
+	font-size:50px;
+}
+.rnb{
+	color:#624224 ;
+	font-size:50px;
+}
+.rock{
+	color:#5EA9EF ;
+	font-size:50px;
+}
+.trot{
+	color:#FF3232 ;
+	font-size:50px;
+}
