--- a/src/main/webapp/resources/css/playlist.css
+++ b/src/main/webapp/resources/css/playlist.css
@@ -1,14 +1,43 @@
 @charset "UTF-8";
 
 @font-face {
-    font-family: 'KOTRAHOPE';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2110@1.0/KOTRAHOPE.woff2') format('woff2');
-    font-weight: normal;
-    font-style: normal;
+	font-family: 'KOTRAHOPE';
+	src:
+		url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2110@1.0/KOTRAHOPE.woff2')
+		format('woff2');
+	font-weight: normal;
+	font-style: normal;
 }
+
 * {
 	font-family: 'KOTRAHOPE';
 	font-weight: 50;
-	text-align:center;
-	color:#002EA5;
+	/* text-align: center; */
+	/* color:#002EA5; */
+}
+
+.back {
+	width: 100px;
+	height: 100px;
+	display:block;
+}
+
+#header>li {
+	display: inline-block;
+	position: relative;
+	top: 10px;
+	left: 10px;
+}
+
+#header>li>a{
+	display:block;
+	position:relative;
+	padding-bottom:10px;
+	margin:50px;
+}
+
+.backft {
+	bottom: 0;
+	text-align: left;
+	color: #000000;
 }
