--- a/src/main/webapp/resources/css/playlist.css
+++ b/src/main/webapp/resources/css/playlist.css
@@ -12,32 +12,33 @@
 * {
 	font-family: 'KOTRAHOPE';
 	font-weight: 50;
-	/* text-align: center; */
-	/* color:#002EA5; */
+	text-align: center;
 }
+
+table{
+	width:100%;
+}
+
 
 .back {
-	width: 100px;
-	height: 100px;
-	display:block;
-}
+	width: 120px;
+	height: 120px;
 
-#header>li {
-	display: inline-block;
-	position: relative;
-	top: 10px;
-	left: 10px;
-}
-
-#header>li>a{
-	display:block;
-	position:relative;
-	padding-bottom:10px;
-	margin:50px;
 }
 
 .backft {
 	bottom: 0;
-	text-align: left;
-	color: #000000;
+	color: lightgray;
+	font-size: 32px;
+	text-decoration-line:none;
+}
+
+.pl{
+	font-size:40px;
+}
+
+.logo{
+	width: 160px;
+	height: 160px;
+	
 }
