소리 이미지 추가 및 playlist footer 추가(수정 예정)

--- a/src/main/webapp/resources/css/playlist.css
+++ b/src/main/webapp/resources/css/playlist.css
@@ -64,3 +64,25 @@
 #sing-mi{
 	width:100%;
 }
+
+.si_btn{
+	width:10%;
+}
+
+#navi-foot{
+	width:100%;
+}
+
+.si_foot{
+	width:40%;
+	font-size:30px;
+}
+
+.ga_foot{
+	width: 20%;
+	font-size:30px;
+}
+
+.sa_btn{
+	width:10%;
+}
