--- a/src/main/webapp/resources/css/mypage.css
+++ b/src/main/webapp/resources/css/mypage.css
@@ -12,37 +12,57 @@
 	text-align:center;
 	color:#002EA5;
 }
-
-
-h1 {
-    position: absolute; /* 절대 위치로 설정합니다. */
-    top: 0; /* 상단에 위치하도록 설정합니다. */
-    left: 0; /* 왼쪽에 위치하도록 설정합니다. */
-    font-size: 70px;
+.header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px;
+}
+h1{
+	font-size:60px;
+}
+#mainpage {
+	width:100px;
+    height:100px;
 }
 
-.logo {
-    position: relative; /* 이미지와 텍스트를 감싸는 컨테이너를 상대 위치로 설정 */
-}
-
-img {
-    position: absolute; /* 절대 위치로 설정 */
-    top: 0; /* 상단 여백 설정 */
-    right: 0; /* 우측 여백 설정 */
-    width:200px;
+#logo {
+     width:200px;
     height:200px;
 }
-.playLists{
-	position: absolute;
-    bottom: 0;
-    left: 0;
+
+
+.line {
+    /*border: none;*/
+    border-top: 3px solid #FFC6F2;
+}
+.myplay{
+	display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 30px;
+    margin-bottom:10;
+}
+h2{
+	font-size:45px;
+}
+
+.playlists {
+    /*display: flex;
+    flex-direction: column;
+      align-items: center;
+    padding: 20px;*/
     display: flex;
     flex-direction: column;
-    padding: 10px;
-    font-size: 40px;
+    align-items: flex-start;
+    padding: 30px;
+    font-size:40px;
 }
 
 a {
-    margin-bottom: 8px;
     text-decoration: none;
+    color: #333; /* 링크 색상 */
+    padding: 5px 0;
+    font-size:40px;
 }
+
