main.jsp 상단 바 부분 테이블로 변경 및 main.css 수정 (위치 수정 필요함!!!!!) + 이미지 업로드 (메인곰, 마이페이지 버튼)

--- a/src/main/webapp/resources/css/login.css
+++ b/src/main/webapp/resources/css/login.css
@@ -29,15 +29,13 @@ h1{
 	text-decoration:none;
 	color:#000000;
 }
-#id_login{
-	position:relative;
-	
-}
 
 
 #spotify {
-    position: absolute;
-    right: 470px; /* Adjust this value as needed */
+
+    align-items:center;
+   	box-shadow:0px 4px 4px 0px #CBCBCB;
+    
 }
 
 
