--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -1,23 +1,66 @@
 @charset "UTF-8";
 
 @font-face {
-    font-family: 'KOTRAHOPE';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2110@1.0/KOTRAHOPE.woff2') format('woff2');
-    font-weight: normal;
-    font-style: normal;
+	font-family: 'KOTRAHOPE';
+	src:
+		url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2110@1.0/KOTRAHOPE.woff2')
+		format('woff2');
+	font-weight: 30;
+	font-style: normal;
+	font-color: #002EA5;
+	text-align: 'center';
 }
+
 * {
 	font-family: 'KOTRAHOPE';
-	font-weight: 50;
-	text-align:center;
-	color:#002EA5;
 }
 
-.main{
-	font-size: 100px;
+.button{
+	background-color: #FFE2F8;
+	color: #002EA5;
+	border: none;
+	width: 331px;
+	height: 110px;
+	font-size:30px;
+	border-radius:30px;
+	box-shadow:0px 4px 4px 0px #CBCBCB;
+}
+#headline{
+	font-size:46px;
+}
+
+div{
+	text-align:center;
+}
+
+.head{
+	width:100%;
+	height:45%;
+}
+#td-t{
+	vertical-align:top;
 	
 }
+#td-b{
+	vertical-align:bottom;
+	width:50%;
+}
 
-.but{
-font-size:50px;
+#logo{
+	width:239px;
+	height:244px;
+}
+#bear{
+	width:460px;
+	height:460px;
+}
+#mypage{
+	width:125px;
+	height:123px;
+}
+
+#login{
+	font-size:32px;
+	color: #002EA5;
+	text-decoration:none;
 }
