--- a/src/main/webapp/resources/css/playlist.css
+++ b/src/main/webapp/resources/css/playlist.css
@@ -65,6 +65,7 @@
 	width:100%;
 }
 
+/* 여기서부터 css 정리 */
 .si_btn{
 	width:10%;
 }
@@ -74,13 +75,14 @@
 }
 
 .si_foot{
-	width:40%;
+	width:30%;
 	font-size:30px;
 }
 
 .ga_foot{
 	width: 20%;
 	font-size:30px;
+	text-align:left;
 }
 
 .sa_btn{
@@ -90,4 +92,24 @@
 .ft_img{
 	width:50px;
 	height:50px;
+	float:center;
 }
+
+.bt_img{
+	float:right;
+	width:50px;
+	height:50px;
+}
+
+.at_img{
+	float: left;
+	width:50px;
+	height:50px;
+}
+
+.so_img{
+	float:left;
+	width:50px;
+	height:50px;
+}
+
