--- a/src/main/webapp/resources/css/test.css
+++ b/src/main/webapp/resources/css/test.css
@@ -11,38 +11,58 @@
 	font-weight: 50;
 	text-align:center;
 	color:#002EA5;
-}
-.btn:nth-child(4n-3) {
-	width:300px;
-    height:40px;
-    background-color: #FFE2F8;
-    border-radius: 10px;
-    padding: 10px 20px;
-    margin-bottom: 3px;
-    border:none;
-}
-.btn:nth-child(4n-1) {
-	width:300px;
-    height:40px;
-    background-color: #FFC6F2;
-    border-radius: 10px;
-    padding: 10px 20px;
-    margin-bottom: 3px;
-    border:none;
-}
-
-h1{
-	text-align:center;
+    overflow:hidden;
 }
 body {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh; 
+    width: 100%;
     margin: 0;
-    transform: scale(1.5);
+    padding: 0;
+    
 }
+.question{
+	position:absolute;
+	top:50%;
+	left:50%;
+	transform:translate(-50%,-50%);
+}
+h1{
+	text-align:center;
+	margin-bottom: 60px;
+	margin-top:100px;
+	font-size:55px;
+}
+.btn:nth-child(4n-3) {
+	width:700px;
+	font-size:35px;
+    height:100px;
+    line-height: 50px;
+    text-align:center;
+    background-color: #FFE2F8;
+    border-radius: 10px;
+    padding: auto;
+    margin-bottom: 30px;
+    border:none;
+   
+}
+.btn:nth-child(4n-1) {
+	width:700px;
+	font-size:35px;
+    height:100px;
+    line-height: 50px;
+    text-align:center;
+    background-color: #FFC6F2;
+    border-radius: 10px;
+    padding: auto;
+    margin-bottom: 30px;
+    border:none;
+  
+}
+
+
 
 
 
