--- a/src/main/webapp/resources/css/mypage.css
+++ b/src/main/webapp/resources/css/mypage.css
@@ -46,10 +46,14 @@
 h2{
 	font-size:45px;
 }
+
 .back {
 	width: 120px;
 	height: 120px;
-
+}
+.cover{
+	width: 120px;
+	height: 120px;
 }
 .backft {
 	bottom: 0;
@@ -57,10 +61,16 @@ h2{
 	font-size: 32px;
 	text-decoration-line:none;
 }
-
+.playListTable{
+	
+}
 #plname {
+	text-align:center;
     display:block;
     margin-bottom:10px;
-    font-size:40px;
+    font-size:30px;
+}
+#move{
+	text-decoration:none;
 }
 
