--- a/src/main/webapp/resources/css/result.css
+++ b/src/main/webapp/resources/css/result.css
@@ -132,3 +132,53 @@ td {
 .star {
 	font-size:60px;
 }
+
+@media (max-width: 600px) {
+    .header-item {
+        margin-left: 10px;
+    }
+
+    .result, .tag, .cover, .reco, 
+    .table2, .rereco, .star,td  {
+        font-size: 14px;
+    }
+
+    .reco {
+        width: 90%;
+    }
+}
+
+@media (max-width: 800px) {
+    .reco {
+        width: 70%;
+    }
+
+    .table2 {
+        padding-left: 20px;
+        font-size: 18px;
+    }
+
+    td {
+        padding-right: 20px;
+    }
+}
+
+@media (max-width: 1200px) {
+    .reco {
+        width: 50%;
+    }
+
+    .table2 {
+        padding-left: 30px;
+    }
+}
+
+@media (max-width: 1600px) {
+    .reco {
+        width: 60%;
+    }
+}
+
+@media (max-width: 2000px) {
+    /* 추가적인 스타일을 필요에 따라 작성하세요. */
+}
