--- a/src/main/webapp/resources/css/login.css
+++ b/src/main/webapp/resources/css/login.css
@@ -38,12 +38,14 @@ h1{
     
 }
 
-
-#spotify-btn{
-	background:"resources/images/btn_spotify.png" no-repeat;
-	height:114px;
-	width:450px;
+#spotify-btn {
+    background-image: url("resources/images/btn_spotify.png");
+    background-repeat: no-repeat;
+    height: 114px;
+    width: 450px;
+    border: none;
 }
+
 #logo{
 	margin:0;
 }
