--- a/src/main/webapp/resources/css/result.css
+++ b/src/main/webapp/resources/css/result.css
@@ -117,13 +117,13 @@ table{
 	border-radius: 30px;
 }
 .table2 {
-	padding-left: 80px;
-	
+	/* padding: 90px; */
 	font-size: 28px;
 }
-td {
+.table2 td {
 	padding-bottom: 10px;
-	padding-right: 90px;
+	padding-right: 50px;
+	padding-left: 50px;
 }
 .rereco {
 	font-size: 28px;
@@ -132,6 +132,8 @@ td {
 .star {
 	font-size:60px;
 }
+
+
 
 @media (max-width: 600px) {
     .header-item {
