header 부분 css 고정해제

--- a/src/main/webapp/resources/css/result.css
+++ b/src/main/webapp/resources/css/result.css
@@ -16,7 +16,7 @@ header {
   /*   padding:40px; */
     text-align: right;
    /*  margin-bottom:40px; */
-    position:fixed;
+  /*   position:fixed; */
     right:65px;
 }
 
