--- a/src/main/webapp/resources/css/playlist.css
+++ b/src/main/webapp/resources/css/playlist.css
@@ -19,6 +19,10 @@
 	width: 100%;
 }
 
+.head-ba{
+	width:20%;
+}
+
 .back {
 	width: 120px;
 	height: 120px;
@@ -31,8 +35,16 @@
 	text-decoration-line: none;
 }
 
+.head-na{
+	width:60%;
+}
+
 .pl {
 	font-size: 40px;
+}
+
+.head-lg{
+	width:20%;
 }
 
 .logo {
@@ -52,7 +64,7 @@
 }
 
 .ga {
-	text-align: left;
+	text-align: center;
 	width: 25%;
 	font-size: 30px;
 }
@@ -62,9 +74,9 @@
 }
 
 .del_img {
-	width: 30px;
-	height: 40px;
-	float: left;
+	width: 45px;
+	height: 45px;
+	float: center;
 }
 
 #sing-mi {
