--- a/src/main/webapp/resources/css/modal.css
+++ b/src/main/webapp/resources/css/modal.css
@@ -42,5 +42,12 @@ a{
 	text-decoration: none;
 	outline: none;
 	font-size: 32px;
+}
+
+.close-btn {
+	width:97px !important;
+	height:43px !important;
+	background-color:#FFC6F2 !important;
 	
 }
+
