--- a/src/main/webapp/resources/css/playlist.css
+++ b/src/main/webapp/resources/css/playlist.css
@@ -98,11 +98,7 @@
 	height: 50px;
 }
 
-/* .ft_img{
-	width:50px;
-	height:50px;
-	float:center;
-} */
+
 .at_img {
 	float: left;
 	width: 50px;
@@ -117,7 +113,7 @@
 .ga_foot {
 	width: 20%;
 	font-size: 30px;
-	text-align: left;
+	text-align: center;
 }
 
 .sa_btn {
@@ -129,25 +125,7 @@
 	width: 50px;
 	height: 50px;
 }
-
-/* .volume-container {
-      position: relative;
-      display: inline-block;
-    }
-
-    .volume-slider {
-      display: none;
-      position: absolute;
-      top: -30px; 바를 위로 올리기
-      left: 50%; 바를 가운데 정렬
-      transform: translateX(-50%); 가운데 정렬을 위한 조정
-      width: 100px;
-    }
-
-    .volume-container.active .volume-slider {
-      display: block;
-    } */
     
 .volume-slider {
       display: none;
-    }
+}
