모달 버튼 수정/모달 닫기 버튼 생성/버튼 배경색,폰트크기 등 modal.css 수정/반응형 페이지를 위한 전체 css수정/모든 result.jsp 페이지 수정

--- a/src/main/webapp/resources/css/modal.css
+++ b/src/main/webapp/resources/css/modal.css
@@ -45,9 +45,11 @@ a{
 }
 
 .close-btn {
-	width:97px !important;
+	width:80px !important;
 	height:43px !important;
 	background-color:#FFC6F2 !important;
-	
+	border: none;
+	border-radius:10px;
+	font-size:20px;
 }
 
