--- a/src/main/webapp/resources/css/modal.css
+++ b/src/main/webapp/resources/css/modal.css
@@ -1,49 +1,38 @@
 @charset "UTF-8";
-
-
-
 .modal-content {
 	background-color:#EBEBEB !important;
 	opacity:0.95;
-	position: fixed;
-    top: 25%;
-    left: 29%;
+	margin-top: 50px;
+	
 }
-
 .cover1 {
 	background-color: #D9D9D9;
 	border-radius: 50%;
 	width: 65px;
 	height: 65px;
 }
-
 .td {
 	padding:20px;
 	padding-right:40px;
 	padding-bottom:30px;
 }
-
-
 #add {
 	display: flex;
 	justify-content : flex-end;
-	font-size:32px;
+	font-size:45px;
 	padding:3px;
 }
-
 .pltitle{
 	display: flex;
 	justify-content : flex-start;
-	font-size:40px;
+	font-size:27px;
 }
-
 a{
 	color: inherit;
 	text-decoration: none;
 	outline: none;
 	font-size: 32px;
 }
-
 .close-btn {
 	width:80px !important;
 	height:43px !important;
@@ -52,4 +41,7 @@ a{
 	border-radius:10px;
 	font-size:20px;
 }
-
+#modaltable{
+	padding:15px;
+	
+}
