--- a/src/main/webapp/resources/css/playlist.css
+++ b/src/main/webapp/resources/css/playlist.css
@@ -129,3 +129,44 @@
 .volume-slider {
       display: none;
 }
+
+/* ---- */
+.modal-content {
+	background-color:#EBEBEB !important;
+	opacity:0.95;
+	margin-top: 50px;
+	
+}
+
+.td {
+	padding:20px;
+	padding-right:40px;
+	padding-bottom:30px;
+}
+
+.pltitle{
+	display: flex;
+	justify-content : flex-start;
+	font-size:40px;
+	text-align:center;
+}
+
+a{
+	color: inherit;
+	text-decoration: none;
+	outline: none;
+	font-size: 32px;
+}
+.close-btn {
+	width:80px !important;
+	height:43px !important;
+	background-color:#FFC6F2 !important;
+	border: none;
+	border-radius:10px;
+	font-size:20px;
+}
+
+#modaltable{
+	padding:15px;
+	
+}
