닫기 버튼 확인으로 텍스트 변경 및 css 변경 다시 테스트하기 링크 9089로 수정 모달 a태그 css 중복되어 제거 플레이리스트추가버튼 24 글자크기 수정 텍스트에리어 영역 설정 및 placeholder (20글자 이내로 입력하세요), 폰트 크기 24

--- a/src/main/webapp/resources/css/modal.css
+++ b/src/main/webapp/resources/css/modal.css
@@ -36,22 +36,18 @@
 	font-size:27px;
 }
 
-a{
-	color: inherit;
-	text-decoration: none;
-	outline: none;
-	font-size: 32px;
-}
-
 .close-btn {
 	width:80px !important;
 	height:43px !important;
 	background-color:#FFC6F2 !important;
 	border: none;
 	border-radius:10px;
-	font-size:20px;
+	font-size:24px;
 }
 #modaltable{
 	padding:15px;
 	
+}
+#modalContent{
+	font-size:24px;
 }
