--- a/src/main/webapp/resources/css/modal.css
+++ b/src/main/webapp/resources/css/modal.css
@@ -50,4 +50,11 @@
 }
 #modalContent{
 	font-size:24px;
+	border:none;
+	resize:none;
+	 background-color:#D9D9D9;
+	
+}
+#modalContent:focus{
+	outline:none;
 }
