--- a/src/main/webapp/resources/css/playlist.css
+++ b/src/main/webapp/resources/css/playlist.css
@@ -52,6 +52,11 @@
 	height: 160px;
 }
 
+.albumimg{
+	width:10vh;
+	height:10vh;
+}
+
 .si {
 	font-size: 30px;
 	width: 30%;
@@ -79,13 +84,25 @@
 	float: center;
 }
 
+.albumimg {
+    width: 10vh;
+    height: 10vh;
+    object-fit: cover; /* 이미지가 자동으로 크기에 맞게 잘리지 않도록 설정 */
+}
+
 #sing-mi {
     width: 100%;
-    height: auto; /* 높이를 화면 높이의 80%로 설정하거나 필요에 따라 조절 */
-    overflow-y: auto; /* 세로 스크롤 활성화 */
-   	display: block; /*block 요소로 설정*/
-   /*  position:fixed;
-   	bottom:0; */
+    height: 80vh;
+    overflow-y: auto;
+    display: block;
+}
+
+#sing-mi table tr {
+    height: 15%;
+}
+
+#sing-mi table tr:last-child {
+    margin-bottom: 50px;
 }
 
 footer {
@@ -154,13 +171,14 @@ footer {
 
 .del-td {
 	padding:20px;
-	padding-right:40px;
+	/* padding-right:40px; */
 	padding-bottom:30px;
+	text-align:center;
 }
 
 .singdel{
 	display: flex;
-	justify-content : flex-start;
+	justify-content : center;
 	font-size:36px;
 	text-align:center;
 }
@@ -185,5 +203,6 @@ a{
 
 #modaltable{
 	padding:15px;
+	width:100%;
 	
 }
