--- a/src/main/webapp/resources/css/modal.css
+++ b/src/main/webapp/resources/css/modal.css
@@ -52,9 +52,20 @@
 	font-size:24px;
 	border:none;
 	resize:none;
-	 background-color:#D9D9D9;
+	background-color:#D9D9D9;
 	
 }
 #modalContent:focus{
 	outline:none;
+}
+
+#modalAlert .modal-dialog {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: none !important;
+}
+
+#modalAlert .modal-content {
+    text-align: center;
 }
