--- a/src/main/webapp/resources/css/modal.css
+++ b/src/main/webapp/resources/css/modal.css
@@ -71,7 +71,18 @@
     text-align: center;
 }
 
-#modalplus{
-	
+#modalplus .modal-dialog {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#modalplus .modal-content {
+    text-align: center;
+}
+
+#modalplus .modal-title {
+    display: block;
+    margin: 0 auto;
 }
 
