--- a/src/main/webapp/resources/css/test.css
+++ b/src/main/webapp/resources/css/test.css
@@ -6,6 +6,7 @@
     font-weight: normal;
     font-style: normal;
 }
+
 * {
 	font-family: 'KOTRAHOPE';
 	font-weight: 50;
@@ -13,6 +14,7 @@
 	color:#002EA5;
     overflow:hidden;
 }
+
 body {
     display: flex;
     flex-direction: column;
@@ -23,46 +25,48 @@ body {
     padding: 0;
     
 }
+
 .question{
 	position:absolute;
 	top:50%;
 	left:50%;
 	transform:translate(-50%,-50%);
 }
+
 h1{
 	text-align:center;
 	margin-bottom: 60px;
 	margin-top:100px;
 	font-size:55px;
 }
+
+.btn{
+	width:700px;
+	font-size:35px;
+    height:100px;
+    line-height: 50px;
+    text-align:center;
+    border-radius: 10px;
+    padding: auto;
+    margin-bottom: 30px;
+    border:none;
+}
+
 .btn:nth-child(4n-3) {
-	width:700px;
-	font-size:35px;
-    height:100px;
-    line-height: 50px;
-    text-align:center;
     background-color: #FFE2F8;
-    border-radius: 10px;
-    padding: auto;
-    margin-bottom: 30px;
-    border:none;
-   
 }
-.btn:nth-child(4n-1) {
-	width:700px;
-	font-size:35px;
-    height:100px;
-    line-height: 50px;
-    text-align:center;
+
+.btn:nth-child(4n-2) {
     background-color: #FFC6F2;
-    border-radius: 10px;
-    padding: auto;
-    margin-bottom: 30px;
-    border:none;
-  
 }
 
+.btn:nth-child(4n-1) {
+    background-color: #FFE2F8;
+}
 
+.btn:nth-child(4n) {
+    background-color: #FFC6F2;
+}
 
 
 
