--- a/src/main/webapp/resources/css/modal.css
+++ b/src/main/webapp/resources/css/modal.css
@@ -86,3 +86,17 @@
     margin: 0 auto;
 }
 
+  #notification {
+    display: none;
+    
+	position: absolute; 
+	bottom : 50px;
+	padding: 15px 20px;
+	background-color: #EBEBEB;
+	opacity: 0.9;
+	border-radius: 10px;
+  }
+
+ 
+
+  
