--- a/src/main/webapp/resources/css/modal.css
+++ b/src/main/webapp/resources/css/modal.css
@@ -86,17 +86,27 @@
     margin: 0 auto;
 }
 
-  #notification {
-    display: none;
-    
-	position: absolute; 
-	bottom : 50px;
-	padding: 15px 20px;
-	background-color: #EBEBEB;
-	opacity: 0.9;
-	border-radius: 10px;
-  }
 
- 
+
+.notification {
+    position: absolute;
+    left: 10px;
+    bottom: 20px;
+    padding: 15px 20px;
+    background-color: #EBEBEB;
+    opacity: 0.9;
+    border-radius: 10px;
+    animation: fadeOutAndIn 3s ease-in-out;
+    display: none;
+}
+
+@keyframes fadeOutAndIn {
+    10%, 90% { opacity: 0.9; }
+    20%, 80% { opacity: 0.9; }
+    30%, 70% { opacity: 0.7; }
+    40%, 60% { opacity: 0.5; }
+    50% { opacity: 0.5; }
+    100% { opacity: 0; display: none; }
+}
 
   
