--- a/src/main/webapp/resources/css/modal.css
+++ b/src/main/webapp/resources/css/modal.css
@@ -89,9 +89,13 @@
 
 
 .notification {
-    position: absolute;
-    left: 10px;
-    bottom: 20px;
+    position: fixed;
+    font-size:16px;
+    width:250px;
+    
+    right: 10px;
+    bottom: 0px;
+    
     padding: 15px 20px;
     background-color: #EBEBEB;
     opacity: 0.9;
