--- a/src/main/webapp/resources/css/test.css
+++ b/src/main/webapp/resources/css/test.css
@@ -12,7 +12,7 @@
 	font-weight: 50;
 	text-align:center;
 	color:#002EA5;
-    overflow:hidden;
+   
 }
 
 body {
@@ -30,20 +30,23 @@ body {
 	position:absolute;
 	top:50%;
 	left:50%;
-	transform:translate(-50%,-50%);
+	transform:translate(-50%,-50%); 
+	max-width: 1024px;
+  	width: 90%;
+  	margin: 0 auto;
 }
 
 h1{
 	text-align:center;
 	margin-bottom: 60px;
 	margin-top:100px;
-	font-size:55px;
+	font-size:3em;
 }
 
 .btn{
-	width:700px;
-	font-size:35px;
-    height:100px;
+	width:80%;
+	font-size:2.15em;
+    height:95px;
     line-height: 50px;
     text-align:center;
     border-radius: 10px;
