test컨트롤러에서 result매핑 redirect 변경, test 페이지 우측 상단 로고 추가

--- a/src/main/webapp/resources/css/test.css
+++ b/src/main/webapp/resources/css/test.css
@@ -26,6 +26,16 @@ body {
     
 }
 
+.logo{
+	display: flex;
+	position: absolute;
+    top: 5px; 
+    right: 90px;
+	width:160px;
+	height:160px;
+}
+
+
 .question{
 	position:absolute;
 	top:50%;
