--- a/src/main/webapp/resources/css/test.css
+++ b/src/main/webapp/resources/css/test.css
@@ -80,11 +80,9 @@ h1{
 .btn:nth-child(4n) {
     background-color: #FFC6F2;
 }
-
-
-
-
-
+button.shadow {
+        box-shadow: 3px 3px 5px grey;
+    }
 
 
 
