--- a/src/main/webapp/resources/css/test.css
+++ b/src/main/webapp/resources/css/test.css
@@ -15,6 +15,8 @@
    
 }
 
+
+
 body {
     display: flex;
     flex-direction: column;
@@ -25,22 +27,40 @@ body {
     padding: 0;
     
 }
+.logodiv{
+	width:80%;
+	/* border:1px solid red;*/
+ 	margin:auto;
+	display: flex;
+	flex-flow: row nowrap;
+	justify-content:flex-end;/*주축 */
+	align-items:center;/*교차*/
+}
+
+.totaldiv{
+	width:100%;
+	display:flex;
+	flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+}
 
 .logo{
-	display: flex;
-	position: absolute;
+	
+	/* position: absolute;
     top: 5px; 
-    right: 90px;
+    right: 90px; */
 	width:160px;
 	height:160px;
 }
 
 
 .question{
-	position:absolute;
+	/*position:absolute;
 	top:50%;
-	left:50%;
-	transform:translate(-50%,-50%); 
+	left:50%; */
+	transform:translate(0,-10%);
+	
 	max-width: 1024px;
   	width: 90%;
   	margin: 0 auto;
@@ -48,14 +68,14 @@ body {
 
 h1{
 	text-align:center;
-	margin-bottom: 60px;
-	margin-top:100px;
-	font-size:3em;
+	margin-bottom:55px;
+	margin-top:0.5em;
+	font-size:3rem;
 }
 
 .btn{
 	width:80%;
-	font-size:2.15em;
+	font-size:2.15rem;
     height:95px;
     line-height: 50px;
     text-align:center;
@@ -84,7 +104,49 @@ button.shadow {
         box-shadow: 3px 3px 5px grey;
     }
 
-
-
+@media (min-width: 600px){
+	.btn{
+	background:green;
+	width:80%;
+	font-size:1.5rem;
+    height:95px;
+    line-height: 50px;
+    text-align:center;
+    border-radius: 10px;
+    padding: auto;
+    margin-bottom: 30px;
+    border:none;
+	}
+}
+@media (min-width: 800px){
+	.btn{
+	background:yellow;
+	width:80%;
+	font-size:2rem;
+    height:95px;
+    line-height: 50px;
+    text-align:center;
+    border-radius: 10px;
+    padding: auto;
+    margin-bottom: 30px;
+    border:none;
+	}
+	
+}
+@media (min-width: 1200px){
+	.btn{
+	background:red;
+	width:80%;
+	font-size:2.5rem;
+    height:95px;
+    line-height: 50px;
+    text-align:center;
+    border-radius: 10px;
+    padding: auto;
+    margin-bottom: 30px;
+    border:none;
+	}
+	
+}
 
 
