--- a/src/main/webapp/resources/css/playlist.css
+++ b/src/main/webapp/resources/css/playlist.css
@@ -19,8 +19,8 @@
 	width: 100%;
 }
 
-.head-ba{
-	width:20%;
+.head-ba {
+	width: 20%;
 }
 
 .back {
@@ -35,16 +35,16 @@
 	text-decoration-line: none;
 }
 
-.head-na{
-	width:60%;
+.head-na {
+	width: 60%;
 }
 
 .pl {
 	font-size: 40px;
 }
 
-.head-lg{
-	width:20%;
+.head-lg {
+	width: 20%;
 }
 
 .logo {
@@ -52,9 +52,9 @@
 	height: 160px;
 }
 
-.albumimg{
-	width:10vh;
-	height:10vh;
+.albumimg {
+	width: 10vh;
+	height: 10vh;
 }
 
 .si {
@@ -85,14 +85,23 @@
 }
 
 .albumimg {
-    width: 120px;
-    height: 120px;
-    object-fit: cover; /* 이미지가 자동으로 크기에 맞게 잘리지 않도록 설정 */
+	width: 120px;
+	height: 120px;
+	object-fit: cover; /* 이미지가 자동으로 크기에 맞게 잘리지 않도록 설정 */
 }
 
 #sing-mi {
-    width: 100%;
+	width: 100%;
+	
 }
+
+#scroll {
+    max-height: 1000px;
+    overflow-y: auto;
+    position: relative;
+	margin-bottom: 130px;
+}
+
 
 /* 여기서부터 css 정리 */
 #navi-foot {
@@ -109,14 +118,13 @@
 	height: 50px;
 }
 
-
 .at_img {
 	float: left;
 	width: 50px;
 	height: 50px;
 }
 
-.im_foot{
+.im_foot {
 	width: 120px;
 	height: 120px;
 }
@@ -141,34 +149,33 @@
 	width: 50px;
 	height: 50px;
 }
-    
+
 .volume-slider {
-      display: none;
+	display: none;
 }
 
 /* ---- */
 .modal-content {
-	background-color:#EBEBEB !important;
-	opacity:0.95;
+	background-color: #EBEBEB !important;
+	opacity: 0.95;
 	margin-top: 50px;
-	
 }
 
 .del-td {
-	padding:20px;
+	padding: 20px;
 	/* padding-right:40px; */
-	padding-bottom:30px;
-	text-align:center;
+	padding-bottom: 30px;
+	text-align: center;
 }
 
-.singdel{
+.singdel {
 	display: flex;
-	justify-content : center;
-	font-size:36px;
-	text-align:center;
+	justify-content: center;
+	font-size: 36px;
+	text-align: center;
 }
 
-a{
+a {
 	color: inherit;
 	text-decoration: none;
 	outline: none;
@@ -176,23 +183,29 @@ a{
 }
 
 .close-btn {
-	width:80px !important;
-	height:43px !important;
-	background-color:#FFC6F2 !important;
+	width: 80px !important;
+	height: 43px !important;
+	background-color: #FFC6F2 !important;
 	border: none;
-	border-radius:10px;
-	font-size:20px;
-	margin-left:20px;
-	margin-right:20px;
+	border-radius: 10px;
+	font-size: 20px;
+	margin-left: 20px;
+	margin-right: 20px;
 }
 
-#modaltable{
-	padding:15px;
-	width:100%;
-	
+#modaltable {
+	padding: 15px;
+	width: 100%;
 }
 
-.modal{
-	padding-left:17px;
+.modal {
+	padding-left: 17px;
 }
 
+footer {
+	position: fixed;
+	bottom: 0;
+	width: 100%;
+	background-color: #ffffff; /* 필요에 따라 배경색을 조절하세요 */
+	padding: 10px;
+}
