--- a/src/main/webapp/resources/css/mypage.css
+++ b/src/main/webapp/resources/css/mypage.css
@@ -50,6 +50,7 @@
 	text-decoration-line: none;
 }
 
+
 /* --플레이리스트 목록-- */
 .playListTable {
   width: 80%;
@@ -156,6 +157,12 @@
 }
 
 #modalContent{
+	font-size:24px;
+	border:none;
+	resize:none;
+	background-color:#D9D9D9;
+}
+#modifyContent{
 	font-size:24px;
 	border:none;
 	resize:none;
