ZaGenreReco:주석처리 / modal.css:트랙추가알림z인덱스조정,위치조정 / result.css:테이블헤드 / result_techno:파일명수정,테이블헤드추가,플리에트랙추가(현재수정중) / TechnoController:트롯에서이름수정,모델에list추가

--- a/src/main/webapp/resources/css/result.css
+++ b/src/main/webapp/resources/css/result.css
@@ -126,11 +126,12 @@ table{
 	/* border:1px solid; */
 }
 .table2 td {
+	/* border:1px solid; */
 	/* padding-bottom: 10px;
 	padding-right: 50px; 
 	padding-left: 20px;*/
-	padding: 25px;
 	/* border:1px solid; */
+	padding: 20px;
 }
 .rereco {
 	font-size: 28px;
@@ -190,3 +191,7 @@ table{
 
 }
  
+ 
+#trhead{
+	font-size:20px;
+}
