--- a/src/main/webapp/resources/css/login.css
+++ b/src/main/webapp/resources/css/login.css
@@ -38,20 +38,23 @@ h1{
     
 }
 
-/* #spotify-btn {
-    height: 100px;
-    width: 450px;
-    border: none;
-    border-radius: 30px;
-} */
+span{
+	font-size:2vw;
+	margin-top: -5px; /* Adjust the margin to move the text higher */
+    order: 2; /* Change the order of the text to move it to the left */
+}
+
 
 #logo{
 	margin:0;
 }
 
 #spotifyLogo{
-	width:50px;
-	height:50px;	
+	width:4vw;
+	height:4vw;
+	 order: 1;	
+	 margin-right:2vw;
+	 margin-left:4.5vw;
 }
 
  
@@ -66,7 +69,7 @@ box-shadow: rgba(39, 174, 96, .15) 0 4px 9px;
  width:35%;
  color: #fff; 
  cursor: pointer; 
- display: inline-block; 
+ display: flex; 
  font-family: Inter,-apple-system,system-ui,"Segoe UI",Helvetica,Arial,sans-serif; 
  font-size: 80%; 
  font-weight: 600;
@@ -87,7 +90,8 @@ box-shadow: rgba(39, 174, 96, .15) 0 4px 9px;
    white-space: nowrap;
    display: flex center; 
    align-items: center;
-   justify-content: center; 
+/*    justify-content: center; 
+ */  /*  justify-content: space-between; */
    margin:0 auto;
    } 
    
