--- a/src/main/webapp/resources/css/result.css
+++ b/src/main/webapp/resources/css/result.css
@@ -151,7 +151,7 @@ table{
 }
 .table2 {
 	/* padding: 90px; */
-	font-size: 28px;
+	font-size: 26px;
 	 /* border:1px solid; */
 }
 .table2 td {
@@ -185,6 +185,10 @@ table{
     .reco {
         width: 70%;
     }
+    
+    .rereco {
+   		font-size: 22px;
+   }
 } 
 
 @media (max-width: 800px) {
@@ -200,6 +204,10 @@ table{
     td {
         padding-right: 10px;
     }
+    
+    .rereco {
+   		font-size: 20px;
+   }
 }
 
 @media (max-width: 600px) {
@@ -216,7 +224,9 @@ table{
         padding-right: 5px;
     }
     
-   
+   .rereco {
+   		font-size: 20px;
+   }
 
 }
  
@@ -229,8 +239,8 @@ table{
 	text-align:center;
 	/* border:1px solid; */
 }
-#tdfoot{
+.rereco{
 	/* border:1px solid; */
-	padding-left: 20px;
-	padding-right: 80px;
+	padding-left: 50px;
+	padding-right: 50px;
 } 
