--- a/src/main/webapp/resources/css/modal.css
+++ b/src/main/webapp/resources/css/modal.css
@@ -51,9 +51,10 @@
 	font-size:24px;
 }
 
-#modaltable{
-	padding:15px;
+#modaltable td:nth-child(1){
+	width:23%;
 }
+
 #modalContent{
 	font-size:24px;
 	border:none;
@@ -93,7 +94,7 @@
 
 
 
-.notification {
+.notification, .notification2 {
     position: fixed;
     font-size:17px;
     font-weight: 100;
@@ -106,7 +107,7 @@
     background-color: #EBEBEB;
     opacity: 0.7;
     border-radius: 10px;
-    animation: fadeOutAndIn 3s ease-in-out;
+    animation: fadeOutAndIn 5s ease-in-out;
     display: none;
 }
 
