--- a/src/main/webapp/resources/css/result.css
+++ b/src/main/webapp/resources/css/result.css
@@ -28,7 +28,7 @@
 #navi-head {
   display: inline-block;
   margin-left: auto; /* 왼쪽 마진을 자동으로 설정하여 우측으로 이동 */
-  margin-right: 130px; /* 오른쪽 마진을 추가하여 조금 띄움 */
+  margin-right: 140px; /* 오른쪽 마진을 추가하여 조금 띄움 */
 }
 
 .head-ba {
@@ -134,10 +134,9 @@ table{
 	font-size: 36px;
 }
 .cover {
-	background-color: #D9D9D9;
-	border-radius: 50%;
-	width: 68px;
-	height: 67px;
+	/* border-radius: 50%; */
+	width: 100px;
+	height: 100px;
 }
 .con{
 	width:100%;
@@ -146,25 +145,25 @@ table{
 	background-color: #FFE2F8;
 	margin: auto;
 	width: 50%;
-	/* height: 30%; */
 	border-radius: 30px;
 }
 .table2 {
-	/* padding: 90px; */
+	width:100%;
 	font-size: 26px;
 	 /* border:1px solid; */
 }
 .table2 td {
-	/* border:1px solid; */
-	/* padding-bottom: 10px;
-	padding-right: 50px; 
-	padding-left: 20px;*/
 	/* border:1px solid; */ 
-	padding: 20px;
+	padding: 10px;
+	padding-bottom:20px;
+}
+.table2 td:nth-child(1){
+	padding-left:25px;
 }
 .rereco {
-	font-size: 28px;
+	font-size: 25px;
 	text-decoration: none;
+	background-color: #FFE2F8;
 }
 .star {
 	font-size:60px;
@@ -232,8 +231,9 @@ table{
  
  
 #trhead{
-	font-size:22px;
+	font-size:20px;
 	border-bottom:1px solid lightgray;
+	border-top:1px solid lightgray;
 }
 .table3{
 	text-align:center;
