--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -30,11 +30,11 @@
 
  .table1,.table2 {
     width: 80%;
-    /* border: 1px solid #444444;    */
+    /* border: 1px solid #444444; */  
     margin:auto;
   }
   td {
-       /* border: 1px solid #444444;  */
+        /*  border: 1px solid #444444; */ 
     }
   
   
@@ -72,10 +72,10 @@
 		width:12%;
 		vertical-align:top;
 		padding-bottom:15px;
-		padding-left:20px;
+		padding-left:25px;
 	}
-	#tr-2.td{
-		height:200px;
+	.tr-2{
+		height:10px;
 	}
 	
 	/* 이미지 크기 변경 */
@@ -163,4 +163,16 @@
 #submit{
 	height:55px;
 }
- 
+
+.tall-row {
+        height: 270px; 
+    }
+    
+    #nickname {
+    width: 12%;
+    vertical-align: top;
+    padding-bottom: 15px;
+    padding-left: 5px;
+    font-size:20px;
+    color:#C3C3C3;
+	}
